# LeanHRPT-Decode

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  AppRun  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  LeanHRPT-Decode.desktop  LeanHRPT-Decode.rc  README.md  calibration.ini  gradients.ini  presets.ini  project.ps1  project.sh  projection.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  linux.yml  release.yml  win.yml
Flowcharts/: FengYun Demod.grc  MetOp Demod.grc  NOAA Meteor HRPT Demodulator.grc
Flowgraphs/: FengYun Demod.grc  MetOp Demod.grc  NOAA Meteor HRPT Demodulator.grc
docker/: build.sh
docker/debian_bullseye/: Dockerfile
docker/ubuntu_hirsute/: Dockerfile
docker/ubuntu_impish/: Dockerfile
docker/ubuntu_jammy/: Dockerfile
images/: .gitattributes
src/: calibration.cpp  calibration.h  commandline.cpp  commandline.h  config.h  fingerprint.cpp  fingerprint.h  geometry.cpp  geometry.h  imagecompositor.cpp  imagecompositor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.cpp  map.h  mapsettings.cpp  mapsettings.h  math.h  network.cpp  network.h  orbit.h  preset.h  projectdialog.cpp  projectdialog.h  projectdialog.ui  projection.cpp  projection.h  satinfo.h  tle.cpp  tle.h  ui_mainwindow.h  ui_projectdialog.h  util.h
src/ccsds/: deframer.cpp  deframer.h  demuxer.cpp  demuxer.h  derand.cpp  derand.h  reedsolomon.cpp
src/config/: config.h  gradient.h  preset.h
src/decoders/: cloudsat_cpr.cpp  cloudsat_cpr.h  decoder.cpp  decoder.h  fengyun.cpp  fengyun.h  fengyun_hrpt.cpp  fengyun_hrpt.h  meteor.cpp  meteor.h  meteor_hrpt.cpp  meteor_hrpt.h  meteor_lrpt.cpp  meteor_lrpt.h  metop.cpp  metop.h  metop_hrpt.cpp  metop_hrpt.h  noaa.cpp  noaa.h  noaa_dsb.h  noaa_gac.cpp  noaa_gac.h  noaa_hrpt.cpp  noaa_hrpt.h
src/decoders/common/: aip.h  amsu.h  tip.h
src/generic/: deframer.cpp  deframer.h  rawimage.cpp  rawimage.h  reedsolomon.cpp  reedsolomon.h
src/geo/: crs.cpp  crs.h  geodetic.h  geolocation.cpp  geolocation.h  matrix.h  vector.h
src/image/: calibration.h  compositor.cpp  compositor.h  raw.cpp  raw.h
src/protocol/: deframer.cpp  deframer.h  rawimage.cpp  rawimage.h  repack.cpp  repack.h  reverse.h  timestamp.h
src/protocol/ccsds/: deframer.cpp  deframer.h  demuxer.cpp  demuxer.h
src/protocol/lrpt/: huffman.cpp  huffman.h  jpeg.cpp  jpeg.h  packet.cpp  packet.h
src/qt/: mainwindow.ui  mapsettings.ui  projectdialog.ui  qpaletteview.h  ui_mainwindow.h  ui_mapsettings.h  ui_projectdialog.h
tools/: CMakeLists.txt  bin2cadu.cpp  bin2raw16.cpp  cli.h  vcdu2cadu.cpp
